feat: integrate role API fixes and scene transfer performance improvements